cabal-version:      3.0
name:               djot
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             John MacFarlane
maintainer:         jgm@berkeley.edu
-- copyright:
category:           Text
build-type:         Simple
extra-doc-files:    CHANGELOG.md
extra-source-files: test/*.test
                    benchmark/m.dj

Library
    build-depends:    base,
                      bytestring >= 0.11.3,
                      flatparse >= 0.5,
                      containers,
                      mtl
    hs-source-dirs:   src
    default-language: Haskell2010
    exposed-modules:  Djot
                      Djot.AST
                      Djot.FlatParse
                      Djot.Options
                      Djot.Attributes
                      Djot.Inlines
                      Djot.Blocks
                      Djot.Html
    ghc-options: -Wall -O2

executable djoths
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base, djot, flatparse, bytestring, containers
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options: -Wall -O2 -rtsopts -threaded

test-suite test-djot
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-K40K -with-rtsopts=-kc40K
  if impl(ghc >= 8.10)
    ghc-options:      -Wunused-packages
  build-depends:
      base >= 4.9 && <5
    , djot
    , text
    , bytestring
    , filepath
    , tasty
    , tasty-hunit
  default-language: Haskell2010

benchmark benchmark-djot
  type:            exitcode-stdio-1.0
  main-is:         Main.hs
  hs-source-dirs:  benchmark
  build-depends:
       djot
     , base >= 4.9 && < 5
     , bytestring
     , directory
     , filepath
     , tasty-bench
  ghc-options: -O2 -threaded -rtsopts -with-rtsopts=-K10K -with-rtsopts=-kc10K
  if impl(ghc >= 8.10)
    ghc-options:      -Wunused-packages
  default-language: Haskell2010

